--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <script src="pixi/pixi.min.js"></script>
-    <script type="text/javascript" src="js/index.js" defer></script>
+
+    <!-- Scripts -->
+    <div style="display: none">
+        <script src="js/dialog/Dialog.js"></script>
+        <script src="js/dialog/DialogManager.js"></script>
+        <script type="text/javascript" src="js/index.js" defer></script>
+    </div>
 </body>
 </html>
