Added json parsing

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <!-- Scripts -->
     <div style="display: none">
         <script src="js/dialog/Dialog.js"></script>
+        <script src="js/dialog/dialogParser.js"></script>
         <script src="js/dialog/DialogManager.js"></script>
         <script type="text/javascript" src="js/index.js" defer></script>
     </div>
