--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
 
     <!-- Scripts -->
     <div style="display: none">
+        <script src="js/level/Level.js"></script>
+        <script src="js/level/FirstLevel.js"></script>
+        <script src="js/level/SecondLevel.js"></script>
+
         <script src="js/dialog/Dialog.js"></script>
         <script src="js/dialog/dialogParser.js"></script>
         <script src="js/dialog/DialogManager.js"></script>
